# pdf-to-markdown

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mdconv.py  pdf2md.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  conversion_quality.md  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
any2md/: __init__.py  __main__.py  _docling.py  _http.py  cli.py  config.py  frontmatter.py  heuristics.py  utils.py  validators.py
any2md/converters/: __init__.py  docx.py  html.py  pdf.py  txt.py
any2md/pipeline/: __init__.py  cleanup.py  structured.py  text.py
docs/: architecture.md  cli-reference.md  output-format.md  troubleshooting.md  upgrading-from-0.7.md
docs/superpowers/plans/: 2026-04-26-any2md-v1-phase1-foundation.md  2026-04-26-any2md-v1-phase2-docling-backend.md  2026-04-26-any2md-v1-phase3-figures-ocr-text-lane.md  2026-04-26-any2md-v1-phase4-polish-config-docs.md  2026-04-26-issue-17-toc-followups.md
docs/superpowers/specs/: 2026-04-26-any2md-v1-design.md  2026-04-26-issue-17-toc-followups-design.md  2026-04-26-v1.0.3-empty-title-orphan-punct-design.md
mdconv/: __init__.py
mdconv/converters/: __init__.py
scripts/: audit-outputs.py  validate-phase1.sh
tests/: conftest.py
tests/cli/: test_cli_backend.py  test_cli_existing_flags.py  test_cli_exit_codes.py  test_cli_high_fidelity.py  test_cli_meta.py  test_cli_no_arxiv_lookup.py  test_cli_ocr_save_images.py  test_cli_quiet_verbose.py  test_cli_strict.py
tests/fixtures/: make_fixtures.py
tests/fixtures/docs/: ligatures_and_softhyphens.txt  table_heavy.docx  web_page.html
tests/fixtures/snapshots/: ligatures_and_softhyphens.md  multi_column.docling.md  multi_column.md  table_heavy.docling.md  table_heavy.md  web_page.md
tests/integration/: test_docx_docling.py  test_docx_fallback_on_warn.py  test_docx_mammoth_fallback.py  test_html_trafilatura.py  test_pdf_backend_override.py  test_pdf_docling.py  test_pdf_pymupdf_fallback.py  test_save_images.py  test_snapshots.py  test_txt.py
tests/unit/: test_atomic_write.py  test_auto_id.py  test_config.py  test_config_walkup.py  test_content_hash.py  test_docling_helper.py  test_frontmatter_compose.py  test_frontmatter_helpers.py  test_heuristics.py  test_http_safe.py  test_meta_overrides.py  test_pdf_complexity.py  test_safe_dir_name.py  test_validators.py  test_zipbomb_guard.py
tests/unit/pipeline/: test_cleanup_html_entities.py  (+25 more)
(+1 files in other folders)
