[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "any2md"
dynamic = ["version"]
description = "Convert PDF, DOCX, HTML, and TXT files — or web pages by URL — to clean, LLM-optimized Markdown with YAML frontmatter."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "rocklambros", email = "rock@rockcyber.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "pymupdf>=1.24.0",
    "pymupdf4llm>=0.0.17",
    "mammoth>=1.6.0",
    "markdownify>=0.13.0",
    "trafilatura>=1.12.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.scripts]
any2md = "any2md.cli:main"

[project.urls]
Homepage = "https://github.com/rocklambros/any2md"
Issues = "https://github.com/rocklambros/any2md/issues"

[tool.hatch.version]
path = "any2md/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/.claude",
    "/.devcontainer",
    "/.gsd",
    "/.zerg",
    "/input",
    "/output",
    "/Text",
    "mdconv.py",
]

[tool.hatch.build.targets.wheel]
packages = ["any2md"]
